--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ __pycache__/
 .pytest-cache
 
 # poetry
+# aserehe is intended to be installed as a library, so we don't need to include
+# poetry.lock in the repository for reproducibility.
 poetry.lock
 
 # ruff
