--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 GitPython = "^3.1.32"
+typer = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 black = "^23.7.0"
