--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -24,3 +24,10 @@ jobs:
       - uses: ./.github/actions/setup-python-env
       - name: Test
         run: poetry run pytest
+  mypy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/setup-python-env
+      - name: Test
+        run: poetry run mypy -p aserehe --strict
