--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "aserehe"
 version = "0.1.0"
 description = "a semantic release helper CLI"
+repository = "https://github.com/lukany/aserehe"
 authors = ["Jan Lukány <lukany.jan@gmail.com>"]
 license = "MIT"
 readme = "README.md"
