--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aserehe"
-version = "0.1.0"
+version = "0" # placeholder — actual version is set by CI
 description = "a semantic release helper CLI"
 repository = "https://github.com/lukany/aserehe"
 authors = ["Jan Lukány <lukany.jan@gmail.com>"]
