--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.11"
 GitPython = "^3.1.32"
+semantic-version = "^2.10.0"
 typer = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
