--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ python = "^3.11"
 GitPython = "^3.1.32"
 semantic-version = "^2.10.0"
 typer = "^0.9.0"
+typing_extensions = "^4.7.1"
 
 [tool.poetry.dev-dependencies]
 black = "^23.7.0"
