--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ mypy = "^1.5.0"
 pytest = "^7.4.0"
 ruff = "^0.0.284"
 
+[tool.poetry.scripts]
+aserehe = "aserehe.__main__:app"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
