--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,18 @@
-[tool.poetry]
+[project]
 name = "aserehe"
 version = "0.1.0"
 description = "a semantic release helper CLI"
-repository = "https://github.com/lukany/aserehe"
-authors = ["Jan Lukány <lukany.jan@gmail.com>"]
-license = "MIT"
 readme = "README.md"
+authors = [
+    { name = "Jan Lukány", email = "lukany.jan@gmail.com" }
+]
+requires-python = ">=3.11"
+dependencies = [
+    "GitPython>=3.1.32,<4.0.0",
+    "semantic-version>=2.10.0,<3.0.0",
+    "typer>=0.9.0,<1.0.0",
+    "typing-extensions>=4.7.1,<5.0.0"
+]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Environment :: Console",
@@ -15,26 +22,22 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Version Control :: Git",
-    "Topic :: Utilities",
+    "Topic :: Utilities"
 ]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-GitPython = "^3.1.32"
-semantic-version = "^2.10.0"
-typer = "^0.9.0"
-typing_extensions = "^4.7.1"
-
-[tool.poetry.dev-dependencies]
-black = "^23.7.0"
-mypy = "^1.5.0"
-pytest = "^7.4.0"
-ruff = "^0.0.284"
-PyYAML = "^6.0.2"
-
-[tool.poetry.scripts]
+[project.scripts]
 aserehe = "aserehe.__main__:app"
 
+[dependency-groups]
+dev = [
+    "bandit>=1.7.5,<2.0.0",
+    "black>=23.7.0,<24.0.0",
+    "mypy>=1.5.0,<2.0.0",
+    "pytest>=7.4.0,<8.0.0",
+    "ruff>=0.0.284,<0.1.0",
+    "PyYAML>=6.0.2,<7.0.0",
+]
+
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
