--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ black = "^23.7.0"
 mypy = "^1.5.0"
 pytest = "^7.4.0"
 ruff = "^0.0.284"
+PyYAML = "^6.0.2"
 
 [tool.poetry.scripts]
 aserehe = "aserehe.__main__:app"
