--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-python-env
       - name: Test
-        run: uv run pytest tests
+        run: uv run pytest
   mypy:
     runs-on: ubuntu-latest
     steps:
