--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -9,25 +9,25 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-python-env
       - name: Format
-        run: poetry run black .
+        run: uv run black .
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-python-env
       - name: Lint
-        run: poetry run ruff check .
+        run: uv run ruff check .
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-python-env
       - name: Test
-        run: poetry run pytest
+        run: uv run pytest
   mypy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-python-env
       - name: Test
-        run: poetry run mypy -p aserehe --strict
+        run: uv run mypy -p aserehe --strict
