--- a/.github/actions/setup-python-env/action.yaml
+++ b/.github/actions/setup-python-env/action.yaml
@@ -9,9 +9,6 @@ runs:
     - name: Install uv
       run: curl -LsSf https://astral.sh/uv/0.5.9/install.sh | sh
       shell: bash
-    - name: Check lock
-      run: uv lock --check
-      shell: bash
     - name: Install dependencies
-      run: uv sync --frozen
+      run: uv sync --locked
       shell: bash
