ci: check uv.lock during setup (#48)

--- a/.github/actions/setup-python-env/action.yaml
+++ b/.github/actions/setup-python-env/action.yaml
@@ -10,5 +10,5 @@ runs:
       run: curl -LsSf https://astral.sh/uv/0.5.9/install.sh | sh
       shell: bash
     - name: Install dependencies
-      run: uv sync --frozen
+      run: uv sync --locked
       shell: bash
