ci: use ruff format instead of black

--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-python-env
       - name: Format
-        run: uv run black .
+        run: uv run ruff format .
   lint:
     runs-on: ubuntu-latest
     steps:
