--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,8 @@ jobs:
     permissions:
       id-token: write
       contents: write
+    environment:
+      name: release
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
