--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,6 +25,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - uses: ./.github/actions/setup-python-env
+      - name: Validate version format
+        run: |
+          if ! [[ ${{ github.event.inputs.version }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Error: Version must be in format major.minor.patch (e.g., 1.2.3)"
+            exit 1
+          fi
       - name: Show updated pyproject.toml
         run: cat pyproject.toml
       - name: Set tag environment variable
