--- a/.github/workflows/check-pr-title.yaml
+++ b/.github/workflows/check-pr-title.yaml
@@ -1,6 +1,9 @@
 name: Check PR Title
 
-on: [pull_request]
+on:
+  pull_request:
+    branches: [main]
+    types: [opened, edited, reopened, synchronize]
 
 jobs:
   check-pr-title:
