--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -5,9 +5,14 @@ on: [push]
 jobs:
   check:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-python-env
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Format
         continue-on-error: true
         id: format
