--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,10 @@ readme = "README.md"
 requires-python = ">=3.11,<4.0.0"
 dependencies = [
     "GitPython>=3.1.43,<4.0.0",
+    "pytest-cov>=6.0.0,<7.0.0",
     "semantic-version>=2.10.0,<3.0.0",
     "typer>=0.15.1,<1.0.0",
-    "typing-extensions>=4.12.2,<5.0.0"
+    "typing-extensions>=4.12.2,<5.0.0",
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
