refactor!: do not use __main__.py (#86)
BREAKING-CHANGE: `aserehe` can't be executed as `python -m aserehe`
anymore but only as `aserehe` (defined as script in `pyproject.toml`).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
 ]
 
 [project.scripts]
-aserehe = "aserehe.__main__:app"
+aserehe = "aserehe._cli:app"
 
 [project.urls]
 repository = "https://github.com/lukany/aserehe"
