ci: run Semantic Release on Check Code completed

--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -1,7 +1,9 @@
 name: Semantic Release
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Check Code"]
+    types: [completed]
     branches:
       - main
 
