--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -10,6 +10,9 @@ on:
 jobs:
   semantic-release:
     runs-on: ubuntu-latest
+    concurrency:
+      group: semantic-release
+      cancel-in-progress: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
