--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -13,6 +13,8 @@ jobs:
     concurrency:
       group: semantic-release
       cancel-in-progress: false
+    permissions:
+      actions: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
