--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,6 +33,8 @@ jobs:
           fi
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # needed for changelog generation
       - uses: ./.github/actions/setup-python-env
       - name: Set tag environment variable
         run: |
