ci: fix run of bandit by using correct target

--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Security Check
         continue-on-error: true
         id: security
-        run: uv run bandit -r aserehe
+        run: uv run bandit -r src
       - name: Check Results
         run: |
           if [[ "${{ steps.format.outcome }}" == "failure" ]] || \
