--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dev = [
     "pytest-cov>=6.0.0,<7.0.0",
     "ruff>=0.8.3,<0.9.0",
     "PyYAML>=6.0.2,<7.0.0",
+    "pip-audit>=2.7.3,<3.0.0",
 ]
 
 [tool.ruff.lint]
