format the markdown again; run code check only on README.md
CODE_OF_CONDUCT.md is not properly formatted yet.

--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -67,8 +67,8 @@ jobs:
 
       - name: Lint Markdown
         run: |
-          markdownlint '**/*.md'
+          markdownlint README.md
 
       - name: Format Markdown
         run: |
-          prettier --check '**/*.md'
+          prettier --check README.md
