--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -48,3 +48,27 @@ jobs:
             echo "One or more checks failed"
             exit 1
           fi
+
+  markdown:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'
+
+      - name: Install dependencies
+        run: |
+          npm install --global prettier@3.5.0 markdownlint-cli@0.44.0
+
+      - name: Lint Markdown
+        run: |
+          markdownlint README.md
+
+      - name: Format Markdown
+        run: |
+          prettier --check README.md
