ci: rename check jobs
The workflow now checks both python and markdown.

--- a/.github/workflows/check-code.yaml
+++ b/.github/workflows/check-code.yaml
@@ -6,7 +6,7 @@ on:
     types: [checks_requested]
 
 jobs:
-  check:
+  check-python:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -49,7 +49,7 @@ jobs:
             exit 1
           fi
 
-  markdown:
+  check-markdown:
     runs-on: ubuntu-latest
 
     steps:
